tests pass for Resource Repo